ACCUMULO-2160 fixed up a lot of findbugs/pmd complaints